fixing vertical wrap splash screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -208,6 +208,11 @@ p {
   }
 }
 
+.hero-splash {
+  background-image: url('../img/hero-image-2.jpg');
+  max-height: 735px;
+}
+
 .counter-section {
   background: #E91E63;
   overflow: hidden;
